min-heights will ensure that elements don't break too much on tiny screens, or when resized

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ nav {
   border-top: 15px solid #73AC96;
   display: flex;
   height: 12vh;
+  min-height: 95px;
   justify-content: space-around;
 }
 
@@ -158,6 +159,7 @@ We've also got a footer to worry about. We're gonna keep this super basic, but a
 .footer {
     position: fixed;
     height: 10vh;
+    min-height: 75px;
     left: 0;
     bottom: 0;
     width: 100%;
